--- a/indx.html
+++ b/indx.html
@@ -282,7 +282,7 @@ footer a:hover {
     <nav>
         <a href="#about">About Me</a>
         <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
+        <a href="#projects">Professional Experience</a>
         <a href="#contact">Contact</a>
     </nav>
 
