--- a/indx.html
+++ b/indx.html
@@ -365,7 +365,7 @@ footer a:hover {
         <h2>Contact Information</h2>
         <p>Email: <a href="mailto:aftabkhadija947@gmail.com">aftabkhadija947@gmail.com</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/khadijaaftab-1b4885238">linkedin.com/in/khadijaaftab</a></p>
-        <p>Location: Mississauga, Ontario, Canada</p>
+        <p>Location: Toronto, Ontario, Canada</p>
     </section>
 
     <!-- Footer -->
