--- a/index.html
+++ b/index.html
@@ -344,19 +344,47 @@ footer a:hover {
             <div class="project-box">
                 <h3>Cybersecurity Intern</h3>
                 <p>Scotiabank - Cyber Control & Defense</p>
+                <p>May 2024 - Present</p>
+
             </div>
-            <div class="project-box">
-                <h3>Digital Crime Investigator Intern</h3>
-                <p>Scotiabank - Corporate Security Digital Fraud Intelligence</p>
-            </div>
+            
             <div class="project-box">
                 <h3>Recruitment & Campus Ambassador</h3>
                 <p>York University</p>
+                <p>Oct 2022 - Present</p>
+
+            </div><div class="project-box">
+                <h3>Digital Crime Investigator Intern</h3>
+                <p>Scotiabank - Corporate Security Digital Fraud Intelligence</p>
+                <p>Jan 2023 - August 2023</p>
+
             </div>
             <div class="project-box">
                 <h3>Teaching Assistant</h3>
                 <p>EECS 1011 - Computational Thinking through Mechatronics</p>
+                <p>Sep 2022 - Dec 2022</p>
+
             </div>
+
+<div class="project-box">
+                <h3>Summer Camp Coding Instructor
+ </h3>
+                <p>Mississauga Secondary Academy</p>
+                <p>Aug 2022 
+</p>
+
+            </div>
+
+
+<div class="project-box">
+                <h3>
+Administrative Assistant</h3>
+                <p>Law365 Professional Corporation</p>
+                <p>Jul 2021 - Jun 2022</p>
+
+            </div>
+
+
         </div>
     </section>
 
