--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ Administrative Assistant</h3>
     <section id="contact">
         <h2>Contact Information</h2>
         <p>Email: <a href="mailto:aftabkhadija947@gmail.com">aftabkhadija947@gmail.com</a></p>
-        <p>LinkedIn: <a href="https:/https://www.linkedin.com/in/khadija-aftab-1b4885238/">linkedin.com/in/khadijaaftab</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/khadija-aftab-1b4885238">linkedin.com/in/khadijaaftab</a></p>
         <p>Location: Toronto, Ontario, Canada</p>
     </section>
 
