--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ footer a:hover {
         <h2>Skills</h2>
         <div class="skills-list">
             <div class="skills-box">
-                <h3>Languages</h3>
+                <h3>Technical Languages</h3>
                 <ul>
                     <li>C (Programming Language)</li>
                     <li>C++</li>
@@ -321,19 +321,38 @@ footer a:hover {
                     <li>HTML & CSS</li>
                     <li>Node.js</li>
                     <li>React</li>
-                    <li>REST APIs</li>
+                    <li>JSP/Servlets</li>
+                    <li>JDBC</li>
+                    <li>Microsoft Office (Word, Excel, PowerPoint)
+</li>
+                    <li>Splunk</li>
+                    <li> Microsoft Teams</li>
+
+
+
+
                 </ul>
             </div>
             <div class="skills-box">
-                <h3>Soft Skills</h3>
+                <h3>Soft Skills & Languages
+
+</h3>
                 <ul>
                     <li>Problem-Solving</li>
                     <li>Team Collaboration</li>
                     <li>Time Management</li>
                     <li>Project Leadership</li>
                     <li>Presentation Skills</li>
+                    <li>Fluent in English, Arabic, and Urdu
+
+
+
+
+
+</li>
+
                 </ul>
-            </div>
+            
         </div>
     </section>
 
