--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@ section:hover {
 }
 
 .skills-box {
-    flex: 1;
+    
     margin: 15px 0;
     padding: 20px;
     background-color: #1a1a1a;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease-in-out;
-    min-width: 280px;
+  
 }
 
 .skills-box h3 {
@@ -293,7 +293,7 @@ footer a:hover {
     <div class="about-text">
         <h2>About Me</h2>
         <p>
-            Hello! I am Khadija Aftab, a final-year BSc Computer Security student at the Lassonde School of Engineering at York University, Ontario, Canada. With a strong passion for cybersecurity, I have hands-on experience through internships and professional roles in digital fraud intelligence, cybersecurity control, and more. I am dedicated to applying my knowledge and skills to solve modern cybersecurity challenges.
+            Hello! I am Khadija Aftab, a final-year BSc Computer Security student at the Lassonde School of Engineering at York University, Ontario, Canada. I have a strong passion for cybersecurity, complemented by practical experience in digital fraud intelligence, cybersecurity controls, and related fields through various internships and professional roles. My academic background has provided me with a deep understanding of core concepts such as network protocols, computer security principles, and software design. I am dedicated to applying my knowledge and skills to solve modern cybersecurity challenges and make a meaningful impact in the field.
         </p>
     </div>
 </section>
