--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@ footer a:hover {
                     <li>Java</li>
                     <li>JavaScript</li>
                     <li>SQL</li>
+                    <li>SQLite</li>
+
                 </ul>
             </div>
             <div class="skills-box">
